syntax = "proto3";

package compiler_gpp;

message Request {
  int32 sub_id = 1;
  string file_provider = 2;
  repeated string src_filename = 3;
  repeated string header_filename = 4;
}

message Response {
  ResultType result = 1;
  string detail = 2;

  enum ResultType {
    SUCCESS = 0;
    FAIL = 1;
    SYSTEM_ERROR = 2;
  }
}