syntax = "proto2";

package tester;

message Request {
  optional int32 sub_id = 1;
  optional int32 prob_id = 2;
  repeated int32 test_case_id = 3;
  optional string file_provider = 4;
}

message Response {
  optional int32 sub_id = 1;
  optional ResultType result = 2;
  repeated TestCase test_case = 3;

  enum ResultType {
    ACCEPTED = 0;
    WRONG_ANSWER = 1;
    PRESENTATION_ERROR = 2;
    TIME_LIMIT_EXCEEDED = 3;
    MEMORY_LIMIT_EXCEEDED = 4;
    SYSTEM_ERROR = 5;
  }

  message TestCase {
    optional string case_id = 1;
    optional ResultType result = 2;
    optional int32 cpu_time = 3;
    optional int32 memory = 4;
    optional int32 exit_code = 5;
    optional int32 signal = 6;
  }
}